--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
+    <base href="/epbex">
     <meta charset="utf-8" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+    
     <title>Receipt Designer for ePOS SDK</title>
 
     <link type="text/css" href="css/smoothness/jquery-ui-1.8.18.custom.css" rel="stylesheet" />
