add bookble standard

--- a/index.html
+++ b/index.html
@@ -1298,7 +1298,8 @@
             <p>
                 Model, Paper width (Liner width)<br />
                 <select id="setting-model">
-                    <option value="tm_t88_80" selected="selected">TM-T88 series (80mm)</option>
+                    <option value="bookable" selected="selected">Custom by Bookable (80mm)</option>
+                    <option value="tm_t88_80">TM-T88 series (80mm)</option>
                     <option value="tm_t88_58">TM-T88 series (58mm)</option>
                     <option value="tm_t70_80">TM-T70 series (80mm)</option>
                     <option value="tm_t70_58">TM-T70 series (58mm)</option>
