add version name

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div id="tabs">
 
         <ul>
+            <li> Version 1.0 </li>
             <li><a href="#edit">Edit</a></li>
             <!-- <li><a href="#preview">Preview</a></li> -->
             <li><a href="#api">API</a></li>
