--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div id="tabs">
 
         <ul>
-            <li> Version 1.0 </li>
+            <li> Version 1.1 </li>
             <li><a href="#edit">Edit</a></li>
             <!-- <li><a href="#preview">Preview</a></li> -->
             <li><a href="#api">API</a></li>
@@ -1204,8 +1204,10 @@
                 </div>
             </div>
 
-            <button id="run"> Run </button>
-            <button id="print-now"> Print Now </button>
+            <div class="action-list">
+                <button id="run"> Run </button>
+                <button id="print-now"> Print Now </button>
+            </div>
 
             <div id="edit-preview">
                 <div id="preview-paper">
